--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
 	
 <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  <maven.compiler.source>1.8</maven.compiler.source>
+  <maven.compiler.target>1.8</maven.compiler.target>	
 </properties>
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
+      <groupId>unit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
